--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Assets\Scripts\Player\Player.cs" />
     <Compile Include="Assets\Scripts\ShakeCamera.cs" />
     <Compile Include="Assets\Scripts\Shielder.cs" />
+    <Compile Include="Assets\Scripts\Splitter.cs" />
     <Compile Include="Assets\Scripts\StageManager.cs" />
     <Compile Include="Assets\Scripts\Stages\Obstacle.cs" />
     <Compile Include="Assets\Scripts\Stages\Stage 1\a\Stage1_initialFase.cs" />
